# MIPSolver

./: .gitignore  CMakeLists.txt  INSTALL.md  LICENSE  MANIFEST.in  MIPSolver.spec  MIPSolver项目概述与使用指南.txt  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  WINDOWS_INSTALL.md  api_server.py  build.py  build_wheel.py  build_windows.bat  build_windows.ps1  create_tools.sh  interact.html  interactive_solver.py  main.py  pyproject.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  setup.py  start_api.sh  start_interactive.sh  test_build.sh  test_core  test_mipsolver_complete.py  test_wheel.py  windows_setup.bat
.github/workflows/: build-wheels.yml
api/: mipsolver_c_api.cpp
assets/: icon_info.txt
bindings/: py_bindings.cpp  python_bindings.cpp
docs/: CROSS_PLATFORM_GUIDE.md  GUI_README.md  WINDOWS_USAGE.md
examples/: test_cpp_api.cpp  test_python_api.py  windows_example.py
gui/: gui_solver.py  web_gui.py
mipsolver/: __init__.py  model.py  solver_monitor.py
mipsolver_pro.egg-info/: PKG-INFO  SOURCES.txt
scripts/: start_gui.sh  start_web.sh
src/: main.cpp
src/core/: core.h  sota_algorithms.h
src/solvers/: branch_bound_solver.h  simplex_solver.h
tests/: test_mps.py  test_xelatex_report.py
tests/test_reports/: test_report.aux  test_report.tex  test_report.toc  test_report_编译说明.txt
tools/: license_generator.cpp
